# free-recite

./: ProjectHome.md  README
dict/FreeRecite/: freeRecite.dict
src/: CMakeLists.txt  Cui.cpp  Cui.h  Dict.cpp  Dict.h  DictItem.h  ForgetCurve.cpp  ForgetCurve.h  FreeRecite  Makefile  Manager.cpp  Manager.h  Reciter.cpp  WordList.cpp  frt-init  main.cpp
src/core/: CMakeLists.txt  ConfigHolder.cpp  ConfigHolder.h  Dict.cpp  Dict.h  DictItem.h  ForgetCurve.h  Manager.h  Reciter.cpp  Reciter.h  Scanner.cpp  Scanner.h  Task.cpp  Task.h  Tester.cpp  Tester.h  WordList.cpp
src/ui/: Cui.cpp  Cui.h
trunk/: AUTHORS  CMakeLists.txt  COPYRIGHT  README  TODO
trunk/dict/: CMakeLists.txt
trunk/dict/FreeRecite/: freeRecite.dict  freeRecite.mgr
trunk/dict/FreeRecite/tasks/: 20081116174357.tkwd  20081118125758.tkwd
trunk/doc/: Readme
trunk/src/: Cui.cpp  FreeRecite  Manager.cpp  Manager.h  Reciter.cpp  Reciter.h  Task.cpp  Task.h  WordList.h  main.cpp
trunk/src/core/: ConfigHolder.cpp  ConfigHolder.h  Dict.cpp  Dict.h  DictItem.cpp  ForgetCurve.cpp  Manager.cpp  Reciter.cpp  Reciter.h  Scanner.cpp  Scanner.h  Task.cpp  Task.h  Tester.h  WordList.cpp  WordList.h
trunk/src/ui/: CMakeLists.txt  Cui.cpp  Cui.h
